<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_In"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:onClick="logIn"/>

    <Button
        android:id="@+id/accountOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="accountOverview"
        android:text="@string/account_Overview"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/assignPcNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/assign_Pc"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/listPcTypes"/>

    <Button
        android:id="@+id/assignPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="assignPc"
        android:text="@string/assign_Pc"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/assignPcNumber"/>
    <Button
        android:id="@+id/unassignPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="unassignPc"
        android:text="@string/unassign_Pc"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/powerOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="powerOn"
        android:text="@string/power_On"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/unassignPc"/>
    <Button
        android:id="@+id/powerOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="powerOff"
        android:text="@string/power_Off"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/unassignPc"/>
    <Button
        android:id="@+id/listPcTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listPcTypes"
        android:text="@string/list_Pc_Types"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/userData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userData"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ok"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:onClick="ok" />

    <Button
        android:id="@+id/checkProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStatus"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/unassignPc"
        android:onClick="checkProgress"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/vnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStatus"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/checkProgress"
        android:onClick="vnc"
        android:layout_marginTop="20dp"/>


</RelativeLayout>